--- a/_config.yml
+++ b/_config.yml
@@ -5,26 +5,26 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: dbyll
-google_analytics: dbyll
-title: dbyll
+disqus: Jeong
+google_analytics: Jeong
+title: Jeong
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: Jeong
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
+  name: Jeong
+  email: jeongsaeyeong@gmail.com
+  github: https://github.com/jeongsaeyeong
   twitter: dbtek
   pinterest: asd123
   linkedin: asd123
-  bio: Your stylish, minimalist theme!
+  bio: 예술, 코딩, 그리고 삶
   email_md5: 726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
